Sostenibilidad DONE, haciendo referencias

--- a/Contexto y alcance/Contextualización/Identificación del problema.tex
+++ b/Contexto y alcance/Contextualización/Identificación del problema.tex
@@ -8,7 +8,7 @@ infraestructura unificada, más robusta y fácilmente escalable.
 Hasta el momento, cada laboratorio y alguna de las Core Facilities\footnote{Una Core Facility es un recurso 
 de investigación compartido y centralizado que proporciona a la comunidad científica acceso a instrumentos, 
 tecnologías, servicios y expertos únicos y altamente especializados. Los núcleos suelen construirse en torno 
-a una tecnología o instrumentación específica, pero no siempre.} del instituto han gestionado y 
+a una tecnología o instrumentación específica, pero no siempre.\cite{CoreFacility2025}} del instituto han gestionado y 
 financiado de manera independiente sus propios servidores, lo que ha derivado en un sistema heterogéneo 
 tanto en las configuraciones técnicas como en los costes asociados. Además, la ausencia de un modelo unificado 
 genera una falta de transparencia transversal en la asignación de gastos que afecta de manera directa al departamento 
