--- a/Contexto y alcance/Justificación/Estado del arte.tex
+++ b/Contexto y alcance/Justificación/Estado del arte.tex
@@ -11,7 +11,7 @@ para mejorar la eficiencia y la toma de decisiones.}:
 \begin{itemize}
     \item SAP: plataforma consolidada en la gestión financiera y administrativa de organizaciones de gran tamaño. Dispone de APIs que facilitan la integración con sistemas externos.
     \item Salesforce: orientado principalmente a la gestión de relaciones con clientes (CRM). Aunque permite cierta gestión financiera, no está específicamente diseñado para la imputación de costes internos de HPC.
-    \item Oracle ERP: solución robusta y muy extendida en grandes corporaciones, con amplias capacidades de integración, pero con costes elevados y una complejidad de despliegue significativa.
+    \item Oracle ERP\cite{ComoPuedesDotar}: solución robusta y muy extendida en grandes corporaciones, con amplias capacidades de integración, pero con costes elevados y una complejidad de despliegue significativa.
     \item Sage: software de gestión empresarial más orientado a pymes, con funcionalidades contables básicas, pero insuficiente para integrar escenarios complejos como el de HPC.
 
 \end{itemize}
