--- a/Contexto y alcance/Metodología y herramientas de seguimiento/Herramientas de seguimiento.tex
+++ b/Contexto y alcance/Metodología y herramientas de seguimiento/Herramientas de seguimiento.tex
@@ -2,13 +2,13 @@
 
 Las herramientas que se utilizarán para el seguimiento del proyecto serán:
 \begin{itemize}
-    \item \textbf{Jira}: es una herramienta de gestión de proyectos que permite la creación, la asignación y el seguimiento 
+    \item \textbf{Jira}\cite{ConfluenceEspacioTrabajo}: es una herramienta de gestión de proyectos que permite la creación, la asignación y el seguimiento 
     del progreso de las diferentes tareas. Aunque esta herramienta se adapta de manera óptima a la metodología Scrum, en 
     este proyecto se adaptará a un enfoque secuencial para cumplir con los objetivos establecidos.
-    \item \textbf{Github}: es una plataforma en la nube que permite el control de versiones \textbf{Git} para alojar y gestionar 
+    \item \textbf{Github}\cite{BuildSoftwareBetter}: es una plataforma en la nube que permite el control de versiones \textbf{Git} para alojar y gestionar 
     proyectos de desarrollo de software. Se empleará para asegurar que el código se mantenga organizado y accesible, permitiendo 
     un seguimiento claro de las modificaciones a lo largo del desarrollo.
-    \item \textbf{Google Workspace}: es el conjunto de herramientas colaborativas en la nube, ofrecidas por Google. Facilitarán 
+    \item \textbf{Google Workspace}\cite{workspaceBusinessAppsHerramientas}: es el conjunto de herramientas colaborativas en la nube, ofrecidas por Google. Facilitarán 
     la comunicación y la organización en el proyecto. Entre sus funcionalidades más relevantes destacan: \textbf{Gmail}, que se 
     utilizará para la gestión del correo electrónico y el chat integrado; \textbf{Meet}, que se empleará para la realización de 
     reuniones virtuales; y \textbf{Drive}, que se usará para el almacenamiento y compartición de documentos, con la ventaja de 
