Add Marco Academico + modificaciones para las correcciones(falta Gestión academica)

--- a/Contexto y alcance/Alcance/Objetivo principal.tex
+++ b/Contexto y alcance/Alcance/Objetivo principal.tex
@@ -1,6 +1,4 @@
 \subsection{Objetivo principal}
-El objetivo principal del proyecto es la construcción de un servicio que automatizará la imputación de los costes de computación y 
-almacenamiento de los laboratorios del IRB Barcelona en el sistema financiero SAP. Este objetivo se pretende alcanzar mediante una 
-aplicación desarrollada en Python, desplegada en un servidor, que obtendrá la información de las cuotas de uso de los diferentes hardware. 
-Dichos datos se almacenarán en BigQuery y, posteriormente, se procesarán para calcular la parte proporcional correspondiente a cada laboratorio según el consumo realizado. 
-Finalmente, la aplicación integrará estos resultados en SAP de forma automática, garantizando la trazabilidad y reduciendo la carga de trabajo manual.
+El objetivo principal del proyecto es automatizar la imputación de los costes de computación y 
+almacenamiento de los laboratorios del IRB Barcelona en el sistema financiero SAP, mediante el 
+desarrollo de una aplicación en Python que procese, calcule e integre la información de consumo de hardware.
