--- a/Contexto y alcance/Alcance/Posibles obstaculos y riesgos.tex
+++ b/Contexto y alcance/Alcance/Posibles obstaculos y riesgos.tex
@@ -6,14 +6,11 @@ a ocurrir durante el desarrollo:
 \begin{itemize}
     \item Errores en la transformación de datos: durante el proceso ETL (extracción, transformación y carga), 
     podrían producirse inconsistencias o errores de formato que afecten a la exactitud de la imputación de costes.
-    \item Complejidad técnica en la modificación de plugins de Slurm: dado que Slurm es un software que no ha 
-    sido utilizado previamente por el estudiante, existe el riesgo de que las tareas relacionadas con la modificación 
-    y adaptación de este requieran más tiempo del previsto, afectando a la cronología del proyecto.
     \item Caída o indisponibilidad de nodos del clúster HPC: una interrupción en el servicio de alguno de los nodos 
     podría afectar tanto a la recogida de datos como al cálculo de cuotas, generando retrasos en la disponibilidad 
     de la información o resultados incompletos.
     \item Errores en la automatización: la ejecución automática del script en la máquina virtual podría fallar por 
     errores de configuración, permisos insuficientes o actualizaciones del sistema operativo.
 \end{itemize}
-Para acabar, siempre existe el riesgo de que aparezcan errores típicos asociados al desarrollo de 
-proyectos software. Como pueden ser errores en el código, problemas en el despliegue de servicios, entre otros.
+Para acabar, siempre existe el riesgo de que aparezcan errores típicos de desarrollo software, como errores en el código, problemas en el despliegue
+de servicios, entre otros.
