--- a/Contexto y alcance/Contextualización/main.tex
+++ b/Contexto y alcance/Contextualización/main.tex
@@ -1,5 +1,7 @@
 \section{Contextualización}
 
+\input{Contexto y alcance/Contextualización/Marco Academico}
+
 \input{Contexto y alcance/Contextualización/Identificación del problema}
 
 \input{Contexto y alcance/Contextualización/Definición de conceptos}
