--- a/Gestión económica/Imprevistos.tex
+++ b/Gestión económica/Imprevistos.tex
@@ -26,5 +26,5 @@ En la siguiente tabla se muestran los riesgos que se han considerado:
         \hline
     \end{tabular}
     \caption{Estimación de costes por imprevistos. Elaboración propia.}
-    \label{tab:recursos_directos}
+    \label{tab:coste_imprevistos}
 \end{table}
