--- a/Planificación temporal/Descripción de las tareas/main.tex
+++ b/Planificación temporal/Descripción de las tareas/main.tex
@@ -1,7 +1,13 @@
 \subsection{Descripción de las tareas}
+En los siguientes apartados se describen las tareas que componen cada uno de los bloques en los que se divide el proyecto.
 
 \input{Planificación temporal/Descripción de las tareas/Gestión del proyecto}
 
 \input{Planificación temporal/Descripción de las tareas/Búsqueda e investigación}
 
 \input{Planificación temporal/Descripción de las tareas/Desarrollo del proyecto}
+
+Respecto a los roles de trabajo asociados a cada tarea y sus respectivas descripciones, se pueden observar en la sección de recursos humanos y en tabla \ref{tab:estimaciones_humanos}.
+Y cabe destacar que todas las tareas descritas necesitan unos recursos materiales que se detallan en la sección de recursos materiales, tanto directos como indirectos, y en las respectivas tablas \ref{tab:recursos_directos} y \ref{tab:recursos_indirectos}.
+
+\clearpage
