--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,7 @@
 \usepackage{pdfpages}
 \usepackage{pdflscape}
 \usepackage{afterpage}
+\usepackage{multirow}
 \usepackage{textpos}
 \usepackage{fancyhdr}
 \usepackage{caption}
