--- a/Contexto y alcance/Alcance/Objetivos secundarios.tex
+++ b/Contexto y alcance/Alcance/Objetivos secundarios.tex
@@ -1,11 +1,6 @@
 \subsection{Objetivos secundarios}
 Otros objetivos que deben cumplirse, pero sin ser críticos para el éxito del proyecto son las siguientes:
 \begin{itemize}
-    \item Visualización de datos con Open OnDemand: permitir que los usuarios consulten de manera sencilla 
-    las cuotas de uso y los costes asociados mediante un front-end desarrollado específicamente.
-    \item El sistema desarrollado debe ser portable, preparando así la inminente migración de los clusters a un servicio externo de housing\footnote{El servicio
-    de \textit{housing} en un Centro de Procesamiento de Datos (CPD), también llamado \textit{colocation}, 
-    consiste en alquilar un espacio físico dentro de ese CPD para instalar, alojar y operar los servidores y otros equipos de IT propios 
-    del cliente. El proveedor del CPD se encarga de la infraestructura física (electricidad, refrigeración, seguridad y conectividad), 
-    mientras que el cliente conserva la propiedad y la gestión de su hardware. }.
+    \item Desarrollar un front-end (Open OnDemand) que permita a los usuarios consultar de manera sencilla las cuotas de uso y los costes asociados.
+    \item Diseñar el sistema para que sea portable, en previsión de la futura migración de los clústeres a un servicio externo de housing\footnote{El servicio de \textit{housing} en un Centro de Procesamiento de Datos (CPD), también llamado \textit{colocation}, consiste en alquilar espacio en el CPD para instalar y operar servidores propios. El proveedor gestiona la infraestructura (electricidad, refrigeración, seguridad y conectividad), mientras el cliente mantiene la propiedad y gestión del hardware.}.
 \end{itemize}
